// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EXACT: DONT show active class 1`] = `
<a
  aria-current={false}
  className={undefined}
  href="/second"
  onClick={[Function]}
  style={undefined}
/>
`;

exports[`NON-EXACT: show active class 1`] = `
<a
  aria-current="true"
  className="active"
  href="/first"
  onClick={[Function]}
  style={Object {}}
/>
`;

exports[`STRICT: DONT show active class 1`] = `
<a
  aria-current={false}
  className={undefined}
  href="/first/"
  onClick={[Function]}
  style={undefined}
/>
`;

exports[`combine with existing styles and class 1`] = `
<a
  aria-current="true"
  className="foo active"
  href="/first"
  onClick={[Function]}
  style={
    Object {
      "color": "red",
      "fontSize": 32,
    }
  }
/>
`;

exports[`isActive return false 1`] = `
Object {
  "isExact": true,
  "params": Object {},
  "path": "/first",
  "url": "/first",
}
`;

exports[`isActive return false 2`] = `
Object {
  "basename": "",
  "entries": Array [
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "state": Object {},
      "url": "/first",
    },
  ],
  "hasSSR": undefined,
  "hash": "",
  "index": 0,
  "kind": "load",
  "length": 1,
  "pathname": "/first",
  "payload": Object {},
  "prev": Object {
    "basename": "",
    "entries": Array [],
    "hash": "",
    "index": -1,
    "kind": "",
    "length": 0,
    "pathname": "",
    "payload": Object {},
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "",
    "url": "",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "type": "FIRST",
  "url": "/first",
}
`;

exports[`isActive return false 3`] = `
<a
  aria-current={false}
  className={undefined}
  href="/first"
  onClick={[Function]}
  style={undefined}
/>
`;

exports[`isActive return false 4`] = `null`;

exports[`isActive return false 5`] = `
Object {
  "basename": "",
  "entries": Array [
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "state": Object {},
      "url": "/first",
    },
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/second/foo",
      "search": "",
      "state": Object {},
      "url": "/second/foo",
    },
  ],
  "hasSSR": undefined,
  "hash": "",
  "index": 1,
  "kind": "push",
  "length": 2,
  "pathname": "/second/foo",
  "payload": Object {
    "param": "foo",
  },
  "prev": Object {
    "basename": "",
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "hasSSR": undefined,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "pathname": "/first",
    "payload": Object {},
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "FIRST",
    "url": "/first",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "type": "SECOND",
  "url": "/second/foo",
}
`;

exports[`isActive return false 6`] = `
<a
  aria-current="true"
  className="active"
  href="/first"
  onClick={[Function]}
  style={Object {}}
/>
`;

exports[`isActive returns true 1`] = `
Object {
  "isExact": true,
  "params": Object {},
  "path": "/first",
  "url": "/first",
}
`;

exports[`isActive returns true 2`] = `
Object {
  "basename": "",
  "entries": Array [
    Object {
      "hash": "",
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "state": Object {},
      "url": "/first",
    },
  ],
  "hasSSR": undefined,
  "hash": "",
  "index": 0,
  "kind": "load",
  "length": 1,
  "pathname": "/first",
  "payload": Object {},
  "prev": Object {
    "basename": "",
    "entries": Array [],
    "hash": "",
    "index": -1,
    "kind": "",
    "length": 0,
    "pathname": "",
    "payload": Object {},
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "",
    "url": "",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "type": "FIRST",
  "url": "/first",
}
`;

exports[`isActive returns true 3`] = `
<a
  aria-current="true"
  className="active"
  href="/first"
  onClick={[Function]}
  style={Object {}}
/>
`;

exports[`query params are ommitted 1`] = `
<a
  aria-current="true"
  className="active"
  href="/first?foo=123"
  onClick={[Function]}
  style={Object {}}
/>
`;

exports[`reacts to state changes (onClick) 1`] = `
<a
  aria-current={false}
  className={undefined}
  href="/second/bar"
  onClick={[Function]}
  style={undefined}
/>
`;

exports[`reacts to state changes (onClick) 2`] = `
<a
  aria-current="true"
  className="active"
  href="/second/bar"
  onClick={[Function]}
  style={Object {}}
/>
`;

exports[`show activeStyle 1`] = `
<a
  aria-current="true"
  className="active"
  href="/first"
  onClick={[Function]}
  style={
    Object {
      "color": "red",
    }
  }
/>
`;

exports[`supports custom HTML tag name 1`] = `
<div
  aria-current={false}
  className={undefined}
  onClick={[Function]}
  style={undefined}
/>
`;

exports[`supports custom HTML tag name in active mode 1`] = `
<div
  aria-current="true"
  className="active-foo"
  onClick={[Function]}
  style={Object {}}
/>
`;

exports[`supports custom HTML tag name which is still a link 1`] = `
<a
  aria-current={false}
  className={undefined}
  href="somewhere"
  onClick={[Function]}
  style={undefined}
/>
`;
